# gemm_cpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  setup.sh
test/: CMakeLists.txt
test/zen3/: CMakeLists.txt  plot.py  result.json  sgemm_test.cc
zen3/: CMakeLists.txt
zen3/include/zen3/: dot.h  gemm.h
zen3/src/: dot.cc  gemm.cc
